--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover{
+background-color: #242424;
+}
